<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.HelpActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_MadeByTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/boogaloo"
                android:text="@string/app_made_by_team_aluminum"
                android:textAlignment="center"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_members"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/boogaloo"
                android:text="@string/team_members"
                android:textAlignment="center"
                android:textSize="20sp" />

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/gifImageView"
                android:layout_width="230dp"
                android:layout_height="204dp"
                android:background="#00FFFFFF"
                android:src="@drawable/babydance"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.568" />

            <TextView
                android:id="@+id/referenceTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/boogaloo"
                android:text="@string/citation_title"
                android:textAlignment="center"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/linksTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:fontFamily="@font/boogaloo"
                android:text="@string/citation_links"
                android:layout_marginBottom="25dp"
                android:textAlignment="center" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>